--- a/template/build-nginx-ech.yml
+++ b/template/build-nginx-ech.yml
@@ -408,6 +408,12 @@ jobs:
         with:
           name: nginx-ech-deb
           path: nginx-ech_*_arm64.deb
+      - name: Upload deb release asset
+        if: startsWith(github.ref, 'refs/tags/r')
+        uses: softprops/action-gh-release@v2
+        with:
+          tag_name: ${{ github.ref_name }}
+          files: nginx-ech_*_arm64.deb
 
   build-openssl-cli:
     needs:
